--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -3729,6 +3729,11 @@
     <!-- Message of notification shown when serial console is enabled. [CHAR LIMIT=NONE] -->
     <string name="console_running_notification_message">Performance is impacted. To disable, check bootloader.</string>
 
+    <!-- Title of notification shown when bootloader debug policy is enabled. [CHAR LIMIT=NONE] -->
+    <string name="fips_gs101_enabled_notification_title">FIPS encryption mode enabled</string>
+    <!-- Message of notification shown when bootloader debug policy is enabled. [CHAR LIMIT=NONE] -->
+    <string name="fips_gs101_enabled_notification_message">Please reinstall GrapheneOS. A future update may render data unusable.</string>
+
     <!-- Title of notification shown when contaminant is detected on the USB port. [CHAR LIMIT=NONE] -->
     <string name="usb_contaminant_detected_title">Liquid or debris in USB port</string>
     <!-- Message of notification shown when contaminant is detected on the USB port. [CHAR LIMIT=NONE] -->
